--- a/package.json
+++ b/package.json
@@ -1,17 +1,39 @@
 {
-  "name": "vue-datatable-x",
+  "name": "vue3-datatable-x",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": {"name": "kelvin chidothi", "url": "https://github.com/kellsworks", "email": "kellsworks@gmail.com"},
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KellsWorks/vue-datatable-x.git"
+  },
+  "main": "./dist/vue3-datatable-x.umd.cjs",
+  "exports": {
+    ".": {
+      "import": "./dist/vue3-datatable-x.js",
+      "require": "./dist/vue3-datatable-x.umd.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vite build && vue-tsc",
+    "types": "vue-tsc ",
+    "preview": "vite preview",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
